--- a/CNN1.ipynb
+++ b/CNN1.ipynb
@@ -64,6 +64,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## インプットする強度マップ（のうちの一つ）"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -145,7 +152,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -198,6 +207,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 正解のベクトル"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -219,12 +235,18 @@
     }
    ],
    "source": [
-    "# 正解ベクトル\n",
     "plt.figure(figsize=(12,2))\n",
     "plt.quiver(t_train[:,0], t_train[:,1], angles='xy', scale_units='xy', scale=0.1)\n",
     "plt.xlim([-1,110])\n",
     "plt.ylim([-1,10])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 予測したベクトル（学習データに対して）"
    ]
   },
   {
@@ -249,7 +271,6 @@
     }
    ],
    "source": [
-    "# 学習データに対する予測ベクトル\n",
     "X = model.forward(x_train)\n",
     "plt.figure(figsize=(12,2))\n",
     "X = X.data\n",
@@ -260,6 +281,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 新規データに対して，CNNで予測したベクトル"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -267,7 +295,7 @@
    "source": [
     "new_input = []\n",
     "for i in np.arange(0, 1, lin):\n",
-    "    new_input.append((aa-i)**2 + (bb-i)**2 + np.random.normal(0, 1))\n",
+    "    new_input.append((aa-i)**2 + (bb-i)**2 + np.random.normal(0, 1)) # 入力強度マップに揺らぎをもたせる\n",
     "new_input = np.array(new_input)\n",
     "\n",
     "new_input = new_input.astype(np.float32)\n",
@@ -297,7 +325,6 @@
     }
    ],
    "source": [
-    "# 学習データに対する予測ベクトル\n",
     "plt.figure(figsize=(12,2))\n",
     "X = new_X.data\n",
     "plt.quiver(X[:,0], X[:,1], angles='xy', scale_units='xy', scale=0.1)\n",
